--- a/TaskManagement/web/CSS/Project.css
+++ b/TaskManagement/web/CSS/Project.css
@@ -11,11 +11,14 @@ body {
     font-family: Arial, sans-serif;
     margin: 20px;
     background-color: #f4f4f9;
-    color: #424242;
 }
 h2 {
     text-align: center;
     color: #131313;
+    margin-top: 10px;
+}
+p {
+    padding-left: 10px;
 }
 button {
     background-color: #f4f4f9;
@@ -47,9 +50,9 @@ button:hover {
     justify-content: space-between;
     align-items: center;
     background: #d8d8d8;
-    padding: 15px;
+    padding: 20px;
     border-radius: 5px;
-    border-left: 5px solid #4CAF50;
+    border-left: 8px solid #4CAF50;
     margin-bottom: 20px;
 }
 .project-link {
@@ -65,10 +68,10 @@ button:hover {
     color: #cc0000; 
     text-decoration: underline;
 }
-.add-project-button {
+.top-button {
     margin-bottom: 20px;
 }
-.info-button {
+.right-button {
     margin-right: 20px;
 }
 .project-info {
@@ -77,7 +80,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     background: #d8d8d8; 
-    padding: 15px;
+    padding: 20px;
     border-radius: 5px;
     margin-bottom: 20px;
 }
@@ -86,15 +89,24 @@ button:hover {
     justify-content: space-between;
     align-items: center;
     background: #ccc; 
-    padding: 10px;
+    padding: 20px;
     border-radius: 5px;
     margin-bottom: 10px;
 }
-.edit-button {
-    
+.add-member-form {
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+    padding-top: 5px;
+    padding-left: 30px;
 }
-.delete-button {
-    margin-right: 20px;
+.input-field {
+    width: 300px; 
+    height: 20px;
+    padding: 10px;
+    margin-right: 5px;
+    border-radius: 5px;
+    font-size: 16px;
 }
 .delete-project-container {
     display: flex;
