--- a/TaskManagement-main/TaskManagement/web/CSS/EditAccount.css
+++ b/TaskManagement-main/TaskManagement/web/CSS/EditAccount.css
@@ -33,7 +33,7 @@ label {
 }
 
 input {
-    width: 100%;
+    width: 95%;
     padding: 10px;
     margin-top: 5px;
     border: 1px solid #1b5e20;
@@ -63,5 +63,5 @@ input:focus {
 }
 
 .btn-back {
-    background-color: grey;
+    background-color: #1b5e20;
 }
