--- a/TaskManagement/web/CSS/EditAccount.css
+++ b/TaskManagement/web/CSS/EditAccount.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #cce7e8;
+    background-color: #d4f7d4;
     display: flex;
     justify-content: center;
     align-items: center;
