--- a/TaskManagement/web/CSS/add-project.css
+++ b/TaskManagement/web/CSS/add-project.css
@@ -48,9 +48,9 @@ button {
     margin-bottom: 10px;
     padding: 0px 20px;
 }
-.input-field {
-    width: 300px; 
+.input-field { 
     height: 16px;
+    width: 90%;
     padding: 10px;
     border: 1.6px solid;
     border-radius: 5px;
@@ -62,4 +62,5 @@ textarea {
     font-family: Arial, sans-serif; 
     max-height: 200px;
     margin-bottom: 15px;
+    width: 90%;
 }
